acrescentado valor de vendas

--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>página de vendas</h1>
+    <p>Vendars 550.0000</p>
     <a href="index.html">voutar para a página inicial</a>
 </body>
 </html>
